--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.9.0"
+    "recharts": "^2.9.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10",
